bugfix and improvements add z-index to picker improve behavior of jquery plugin code fix example code

--- a/colorpicker.less
+++ b/colorpicker.less
@@ -33,6 +33,7 @@ body.unselectable {
   .box-sizing('border-box');
   padding: 5px;
   background-color: @bg_color;
+  z-index: 10000;
   .map {
     cursor: @pointer_cursor;
     position: relative;
